--- a/app/src/main/res/layout/activity_customer_order.xml
+++ b/app/src/main/res/layout/activity_customer_order.xml
@@ -2,18 +2,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="20dp"
+    android:background="#FFF8F0">
 
+    <!-- JUDUL -->
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="Pesanan Saya"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:layout_marginBottom="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:textColor="#6F4E37"
+        android:gravity="center"
+        android:layout_marginBottom="20dp"/>
 
+    <!-- LIST PESANAN -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCustomerOrders"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="8dp"/>
 </LinearLayout>
