--- a/app/src/main/res/layout/activity_login_kasir.xml
+++ b/app/src/main/res/layout/activity_login_kasir.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="24dp"
-    android:background="#FFF8F0">
+    android:background="@drawable/bgtiga">
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,7 +13,7 @@
         android:text="Login Kasir"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="#6F4E37"
+        android:textColor="#FFFFFF"
         android:layout_marginBottom="24dp"/>
 
     <EditText
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         android:inputType="textPassword"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp" />
 
     <Button
         android:id="@+id/btnLoginKasir"
